New columns returned by nested_sampling.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(nested_sampling,"function")
 S3method(nested_sampling,control)
+S3method(nobs,ernest_run)
 S3method(print,ernest_run)
 S3method(propose_live,ernest_sampler)
 S3method(propose_uniform,ernest_sampler)
@@ -16,6 +17,7 @@ export(new_sampler)
 export(propose_live)
 export(propose_uniform)
 export(refresh_sampler)
+export(sample_run)
 export(set_prior_transform)
 export(unit_cube)
 export(update_sampler)
