--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,25 +4,25 @@ S3method(nested_sampling,"function")
 S3method(nested_sampling,control)
 S3method(nobs,ernest_run)
 S3method(print,ernest_run)
+S3method(prior_transform,"function")
+S3method(prior_transform,distribution)
 S3method(propose_live,ernest_sampler)
 S3method(propose_uniform,ernest_sampler)
 S3method(refresh_sampler,ernest_sampler)
-S3method(set_prior_transform,"function")
-S3method(set_prior_transform,distribution)
-S3method(set_prior_transform,list)
-S3method(set_prior_transform,prior_transform)
 S3method(update_bounds,ernest_sampler)
+export(as_draws)
 export(nested_sampling)
 export(new_sampler)
+export(prior_transform)
 export(propose_live)
 export(propose_uniform)
 export(refresh_sampler)
 export(sample_run)
-export(set_prior_transform)
 export(unit_cube)
 export(update_sampler)
 import(rlang)
 importFrom(glue,glue)
 importFrom(lifecycle,deprecated)
+importFrom(posterior,as_draws)
 importFrom(tibble,tibble)
 useDynLib(ernest, .registration = TRUE)
