Optimized prior_transformer function factory, reverted queuing for unit_cube, conformed to CRAN checks.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,6 @@ S3method(as_draws_matrix,ernest_run)
 S3method(as_draws_rvars,ernest_run)
 S3method(nested_sampling,"function")
 S3method(nested_sampling,control)
-S3method(nobs,ernest_run)
 S3method(print,ernest_run)
 S3method(print,summary.ernest_run)
 S3method(prior_transform,"function")
@@ -31,4 +30,6 @@ importFrom(lifecycle,deprecated)
 importFrom(posterior,as_draws_matrix)
 importFrom(posterior,as_draws_rvars)
 importFrom(tibble,tibble)
+importFrom(utils,head)
+importFrom(utils,tail)
 useDynLib(ernest, .registration = TRUE)
