--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,17 +13,16 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 Imports: 
     cli,
-    distributional,
     glue,
     lifecycle,
     posterior,
     prettyunits,
-    purrr,
     rlang (>= 1.1.0),
     tibble,
-    withr
+    vctrs
+Suggests: 
+    testthat (>= 3.0.0),
+    distributional
+Config/testthat/edition: 3
 LinkingTo: 
     cpp11
-Suggests: 
-    testthat (>= 3.0.0)
-Config/testthat/edition: 3
