Swapped to RcppParallel, added CPP uniform proposal generator.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,8 @@ export(summarise_run_metrics)
 export(unit_cube)
 export(update_sampler)
 import(rlang)
+importFrom(Rcpp,sourceCpp)
+importFrom(RcppParallel,RcppParallelLibs)
 importFrom(glue,glue)
 importFrom(lifecycle,deprecated)
 importFrom(posterior,as_draws_matrix)
