--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,8 @@ Imports:
     lifecycle,
     posterior,
     prettyunits,
+    Rcpp,
+    RcppParallel,
     rlang (>= 1.1.0),
     tibble,
     vctrs
@@ -24,5 +26,6 @@ Suggests:
     testthat (>= 3.0.0),
     distributional
 Config/testthat/edition: 3
-LinkingTo: 
-    cpp11
+LinkingTo:
+    Rcpp,
+    RcppParallel
