--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,20 +9,23 @@ S3method(print,summary.ernest_run)
 S3method(prior_transform,"function")
 S3method(prior_transform,distribution)
 S3method(propose_live,ernest_sampler)
+S3method(propose_live,rw_cube)
 S3method(propose_uniform,ernest_sampler)
 S3method(refresh_sampler,ernest_sampler)
+S3method(refresh_sampler,rw_cube)
 S3method(summary,ernest_run)
 S3method(update_bounds,ernest_sampler)
 export(as_draws_matrix)
 export(as_draws_rvars)
+export(get_integration_df)
 export(nested_sampling)
 export(new_sampler)
 export(prior_transform)
 export(propose_live)
 export(propose_uniform)
 export(refresh_sampler)
-export(summarise_run_metrics)
-export(unit_cube)
+export(rw_cube)
+export(unif_cube)
 export(update_sampler)
 import(rlang)
 importFrom(Rcpp,sourceCpp)
