--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Description: A complete implementation of the nested sampling algorithm
 License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
 Imports: 
     cli,
     generics,
@@ -18,6 +18,7 @@ Imports:
     lifecycle,
     posterior,
     prettyunits,
+    R6,
     Rcpp,
     rlang (>= 1.1.0),
     S7,
@@ -30,19 +31,20 @@ Config/testthat/edition: 3
 LinkingTo:
     Rcpp
 Collate: 
-    'RcppExports.R'
     'utils.R'
-    'ernest_lrps-new.R'
-    'ernest_run-new.R'
+    'ErnestLRPS_class.R'
+    'ErnestRun_class.R'
+    'ErnestWorkspace_class.R'
+    'RcppExports.R'
     'as_draws.R'
     'compile.R'
     'ernest-package.R'
-    'ernest_helper_classes.R'
-    'format-print.R'
     'generate.R'
     'import-standalone-obj-type.R'
     'import-standalone-purrr.R'
     'import-standalone-types-check.R'
-    'nested_sampling.R'
-    'random_walk_cube-new.R'
-    'uniform_cube-new.R'
+    'nested_sampling_impl.R'
+    'propose.R'
+    'reexports.R'
+    'tidy.R'
+    'update_sampler.R'
