--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,27 +8,27 @@ Description: A complete implementation of the nested sampling algorithm
     for R, allowing users to estimate the evidence and posterior of a
     statistical model.
 License: GPL (>= 3)
-Encoding: UTF-8
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.2
 Imports: 
     cli,
     generics,
     glue,
     lifecycle,
+    posterior,
     Rcpp,
     rlang (>= 1.1.0),
     S7,
     tibble,
-    posterior,
-    vctrs,
-    utils
+    utils,
+    vctrs
 Suggests: 
     mvtnorm,
     testthat (>= 3.0.0)
-Config/testthat/edition: 3
 LinkingTo:
     Rcpp
+Config/testthat/edition: 3
+Encoding: UTF-8
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.3.2
 Collate: 
     'utils.R'
     'ErnestSampler.R'
