--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -42,6 +42,8 @@ Collate:
     'import-standalone-obj-type.R'
     'import-standalone-purrr.R'
     'import-standalone-types-check.R'
+    'lrps.R'
+    'nested_sampling.R'
     'nested_sampling_impl.R'
     'propose.R'
     'reexports.R'
