--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ S3method(propose_live,ErnestSampler)
 S3method(propose_live,RandomWalkCube)
 S3method(propose_uniform,ErnestSampler)
 S3method(update_sampler,ErnestSampler)
+S3method(update_sampler,RandomWalkCube)
 export(calculate)
 export(compile)
 export(generate)
@@ -28,6 +29,7 @@ importFrom(generics,compile)
 importFrom(generics,generate)
 importFrom(glue,glue)
 importFrom(lifecycle,deprecated)
+importFrom(prettyunits,pretty_signif)
 importFrom(rlang,"%@%")
 importFrom(rlang,"%@%<-")
 importFrom(rlang,"%|%")
