--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(as_draws,ErnestSampler)
 S3method(as_draws_df,ErnestSampler)
 S3method(as_draws_matrix,ErnestSampler)
+S3method(autoplot,ErnestSampler)
 S3method(build_sampler,rwmh_cube)
 S3method(build_sampler,unif_cube)
 S3method(calculate,ErnestSampler)
@@ -12,6 +13,7 @@ S3method(generate,ErnestSampler)
 S3method(glance,ErnestSampler)
 S3method(nested_sampling,"function")
 S3method(nested_sampling,default)
+S3method(plot,ErnestSampler)
 S3method(print,ErnestSampler)
 S3method(propose_live,ErnestSampler)
 S3method(propose_live,RandomWalkCube)
@@ -35,7 +37,19 @@ importFrom(generics,calculate)
 importFrom(generics,compile)
 importFrom(generics,generate)
 importFrom(generics,glance)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,autoplot)
+importFrom(ggplot2,facet_grid)
+importFrom(ggplot2,geom_hline)
+importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_ribbon)
+importFrom(ggplot2,geom_vline)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,scale_x_continuous)
+importFrom(ggplot2,scale_y_continuous)
+importFrom(ggplot2,vars)
 importFrom(glue,glue)
+importFrom(graphics,plot)
 importFrom(lifecycle,deprecated)
 importFrom(posterior,as_draws)
 importFrom(posterior,as_draws_df)
