--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,3 +34,4 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 VignetteBuilder: knitr
+URL: https://kylesnap.github.io/ernest/
