Replacing the glance method with a summary method. Slight adjustments to format methods.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,10 @@ S3method(as_draws_list,ernest_sampler)
 S3method(as_draws_matrix,ernest_sampler)
 S3method(autoplot,ernest_sampler)
 S3method(calculate,ernest_sampler)
+S3method(compile,ernest_sampler)
 S3method(format,ernest_lrps)
+S3method(format,summary.ernest_sampler)
 S3method(generate,ernest_sampler)
-S3method(glance,ernest_sampler)
 S3method(make_ptype,character)
 S3method(make_ptype,data.frame)
 S3method(make_ptype,numeric)
@@ -17,12 +18,14 @@ S3method(nested_sampling,default)
 S3method(nvariables,ernest_sampler)
 S3method(plot,ernest_sampler)
 S3method(print,ernest_lrps)
+S3method(print,summary.ernest_sampler)
 S3method(propose_live,ernest_lrps)
 S3method(propose_live,rw_cube)
 S3method(propose_uniform,ernest_lrps)
 S3method(refresh_lrps,rw_cube)
 S3method(refresh_lrps,uniform_cube)
 S3method(set_variables,ernest_sampler)
+S3method(summary,ernest_sampler)
 S3method(update_sampler,ernest_lrps)
 S3method(update_sampler,rw_cube)
 S3method(variables,ernest_sampler)
