--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,18 +8,20 @@ Description: A complete implementation of the nested sampling algorithm
     for R, allowing users to estimate the evidence and posterior of a
     statistical model.
 License: GPL (>= 3)
+URL: https://kylesnap.github.io/ernest/
 Imports: 
     cli,
     generics,
+    ggplot2,
     glue,
     lifecycle,
     posterior,
+    prettyunits,
     R6,
     Rcpp,
     rlang (>= 1.1.0),
     tibble,
     utils,
-    ggplot2,
     vctrs
 Suggests: 
     knitr,
@@ -29,9 +31,9 @@ Suggests:
     vdiffr
 LinkingTo:
     Rcpp
+VignetteBuilder: 
+    knitr
 Config/testthat/edition: 3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
-VignetteBuilder: knitr
-URL: https://kylesnap.github.io/ernest/
