--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,28 @@ S3method(as_draws_matrix,ernest_sampler)
 S3method(autoplot,ernest_sampler)
 S3method(calculate,ernest_sampler)
 S3method(compile,ernest_sampler)
+S3method(ernest_prior,"function")
+S3method(ernest_prior,dist_beta)
+S3method(ernest_prior,dist_binomial)
+S3method(ernest_prior,dist_cauchy)
+S3method(ernest_prior,dist_chisq)
+S3method(ernest_prior,dist_default)
+S3method(ernest_prior,dist_exponential)
+S3method(ernest_prior,dist_f)
+S3method(ernest_prior,dist_gamma)
+S3method(ernest_prior,dist_geometric)
+S3method(ernest_prior,dist_hypergeometric)
+S3method(ernest_prior,dist_lognormal)
+S3method(ernest_prior,dist_negbin)
+S3method(ernest_prior,dist_normal)
+S3method(ernest_prior,dist_poisson)
+S3method(ernest_prior,dist_student_t)
+S3method(ernest_prior,dist_truncated)
+S3method(ernest_prior,dist_uniform)
+S3method(ernest_prior,dist_weibull)
+S3method(ernest_prior,distribution)
 S3method(format,ernest_lrps)
+S3method(format,ernest_prior)
 S3method(format,summary.ernest_sampler)
 S3method(generate,ernest_sampler)
 S3method(make_ptype,character)
@@ -15,9 +36,11 @@ S3method(make_ptype,data.frame)
 S3method(make_ptype,numeric)
 S3method(nested_sampling,"function")
 S3method(nested_sampling,default)
+S3method(nvariables,ernest_prior)
 S3method(nvariables,ernest_sampler)
 S3method(plot,ernest_sampler)
 S3method(print,ernest_lrps)
+S3method(print,ernest_prior)
 S3method(print,summary.ernest_sampler)
 S3method(propose_live,ernest_lrps)
 S3method(propose_live,rw_cube)
@@ -28,9 +51,11 @@ S3method(set_variables,ernest_sampler)
 S3method(summary,ernest_sampler)
 S3method(update_sampler,ernest_lrps)
 S3method(update_sampler,rw_cube)
+S3method(variables,ernest_prior)
 S3method(variables,ernest_sampler)
 export(calculate)
 export(compile)
+export(ernest_prior)
 export(generate)
 export(glance)
 export(nested_sampling)
@@ -39,6 +64,7 @@ export(unif_cube)
 import(rlang)
 importFrom(R6,R6Class)
 importFrom(Rcpp,sourceCpp)
+importFrom(distributional,cdf)
 importFrom(generics,calculate)
 importFrom(generics,compile)
 importFrom(generics,generate)
