CRAN compliance and documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,10 +49,10 @@ S3method(variables,ernest_prior)
 S3method(variables,ernest_sampler)
 export(calculate)
 export(compile)
+export(default_prior)
 export(ernest_likelihood)
 export(ernest_prior)
 export(generate)
-export(glance)
 export(nested_sampling)
 export(rwmh_cube)
 export(unif_cube)
@@ -63,7 +63,6 @@ importFrom(distributional,cdf)
 importFrom(generics,calculate)
 importFrom(generics,compile)
 importFrom(generics,generate)
-importFrom(generics,glance)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,autoplot)
 importFrom(ggplot2,facet_grid)
@@ -88,6 +87,12 @@ importFrom(rlang,"%@%")
 importFrom(rlang,"%@%<-")
 importFrom(rlang,"%|%")
 importFrom(rlang,"%||%")
+importFrom(stats,family)
+importFrom(stats,model.matrix)
+importFrom(stats,model.offset)
+importFrom(stats,model.response)
+importFrom(stats,model.weights)
+importFrom(stats,update)
 importFrom(tibble,tibble)
 importFrom(utils,head)
 importFrom(utils,tail)
