--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,9 @@ export(unif_cube)
 import(rlang)
 importFrom(R6,R6Class)
 importFrom(Rcpp,sourceCpp)
+importFrom(cli,cli_progress_bar)
+importFrom(cli,cli_progress_done)
+importFrom(cli,cli_progress_update)
 importFrom(distributional,cdf)
 importFrom(generics,calculate)
 importFrom(generics,compile)
