--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -43,6 +43,7 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Collate: 
+    'calculate.R'
     'cpp11.R'
     'ernest-package.R'
     'ernest_likelihood-class.R'
