--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,6 +22,7 @@ Imports:
     R6,
     rlang (>= 1.1.0),
     tibble,
+    tidyselect,
     uniformly,
     utils,
     vctrs
@@ -43,23 +44,3 @@ Config/testthat/edition: 3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
-Collate: 
-    'calculate.R'
-    'cpp11.R'
-    'ernest-package.R'
-    'ernest_likelihood-class.R'
-    'ernest_lrps-class.R'
-    'ernest_prior-class.R'
-    'ernest_result.R'
-    'import-standalone-purrr.R'
-    'utils.R'
-    'ernest_sampler-class.R'
-    'ernest_sampling.R'
-    'generics.R'
-    'import-standalone-obj-type.R'
-    'import-standalone-types-check.R'
-    'nested_sampling.R'
-    'nested_sampling_impl.R'
-    'plot.R'
-    'posterior.R'
-    'summary.ernest_sampler.R'
