Added a sorely needed print method for prior.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,12 +10,14 @@ S3method(compile,ernest_sampler)
 S3method(create_likelihood,"function")
 S3method(create_likelihood,ernest_likelihood)
 S3method(format,ernest_likelihood)
+S3method(format,ernest_prior)
 S3method(format,ernest_run)
 S3method(format,summary.ernest_run)
 S3method(generate,ernest_sampler)
 S3method(plot,ernest_estimates)
 S3method(plot,ernest_run)
 S3method(print,ernest_likelihood)
+S3method(print,ernest_prior)
 S3method(print,ernest_run)
 S3method(print,summary.ernest_run)
 S3method(summary,ernest_run)
