Reworked create_prior and special_prior classes.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,9 +40,11 @@ export(unif_cube)
 export(visualize)
 import(rlang)
 importFrom(R6,R6Class)
+importFrom(cli,cli_abort)
 importFrom(cli,cli_progress_bar)
 importFrom(cli,cli_progress_done)
 importFrom(cli,cli_progress_update)
+importFrom(cli,cli_warn)
 importFrom(generics,calculate)
 importFrom(generics,compile)
 importFrom(generics,generate)
@@ -67,9 +69,12 @@ importFrom(rlang,"%@%")
 importFrom(rlang,"%@%<-")
 importFrom(rlang,"%|%")
 importFrom(rlang,"%||%")
+importFrom(rlang,is_double)
+importFrom(rlang,try_fetch)
 importFrom(tibble,tibble)
 importFrom(utils,head)
 importFrom(utils,tail)
 importFrom(vctrs,vec_c)
+importFrom(vctrs,vec_cast)
 importFrom(vctrs,vec_size)
 useDynLib(ernest, .registration = TRUE)
