--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,9 +4,7 @@ Version: 0.0.0.9000
 Authors@R: 
     person("Kyle", "Dewsnap", , "kyle.dewsnap@ubc.ca", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-2132-8083"))
-Description: A complete implementation of the nested sampling algorithm
-    for R, allowing users to estimate the evidence and posterior of a
-    statistical model.
+Description: TODO.
 License: GPL (>= 3)
 URL: https://kylesnap.github.io/ernest/
 BugReports: https://github.com/kylesnap/ernest/issues/
