Calculate summary and print methods.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,23 +3,28 @@
 S3method(as_draws,ernest_run)
 S3method(as_draws_matrix,ernest_run)
 S3method(as_draws_rvars,ernest_run)
-S3method(autoplot,ernest_estimates)
+S3method(autoplot,ernest_estimate)
 S3method(autoplot,ernest_run)
 S3method(calculate,ernest_run)
 S3method(compile,ernest_sampler)
 S3method(create_likelihood,"function")
 S3method(create_likelihood,ernest_likelihood)
+S3method(format,ernest_estimate)
 S3method(format,ernest_likelihood)
 S3method(format,ernest_prior)
 S3method(format,ernest_run)
+S3method(format,summary.ernest_estimate)
 S3method(format,summary.ernest_run)
 S3method(generate,ernest_sampler)
-S3method(plot,ernest_estimates)
+S3method(plot,ernest_estimate)
 S3method(plot,ernest_run)
+S3method(print,ernest_estimate)
 S3method(print,ernest_likelihood)
 S3method(print,ernest_prior)
 S3method(print,ernest_run)
+S3method(print,summary.ernest_estimate)
 S3method(print,summary.ernest_run)
+S3method(summary,ernest_estimate)
 S3method(summary,ernest_run)
 S3method(visualize,ernest_run)
 export(as_draws)
