--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,7 +43,6 @@ export(nested_sampling)
 export(rwmh_cube)
 export(unif_cube)
 export(visualize)
-import(rlang)
 importFrom(R6,R6Class)
 importFrom(cli,cli_abort)
 importFrom(cli,cli_progress_bar)
@@ -70,11 +69,28 @@ importFrom(lifecycle,deprecated)
 importFrom(posterior,as_draws)
 importFrom(posterior,as_draws_matrix)
 importFrom(posterior,as_draws_rvars)
-importFrom(rlang,"%@%")
-importFrom(rlang,"%@%<-")
 importFrom(rlang,"%|%")
 importFrom(rlang,"%||%")
+importFrom(rlang,.data)
+importFrom(rlang,arg_match)
+importFrom(rlang,arg_match0)
+importFrom(rlang,as_function)
+importFrom(rlang,call2)
+importFrom(rlang,caller_arg)
+importFrom(rlang,caller_env)
+importFrom(rlang,check_dots_empty)
+importFrom(rlang,check_dots_used)
+importFrom(rlang,expr)
+importFrom(rlang,exprs)
+importFrom(rlang,inject)
 importFrom(rlang,is_double)
+importFrom(rlang,is_empty)
+importFrom(rlang,is_scalar_double)
+importFrom(rlang,is_scalar_integerish)
+importFrom(rlang,is_scalar_logical)
+importFrom(rlang,list2)
+importFrom(rlang,new_function)
+importFrom(rlang,pairlist2)
 importFrom(rlang,try_fetch)
 importFrom(tibble,tibble)
 importFrom(utils,head)
