srr conformity checklist completed

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,11 +40,13 @@ export(create_t_prior)
 export(create_uniform_prior)
 export(generate)
 export(nested_sampling)
+export(run_example)
 export(rwmh_cube)
 export(unif_cube)
 export(visualize)
 importFrom(R6,R6Class)
 importFrom(cli,cli_abort)
+importFrom(cli,cli_inform)
 importFrom(cli,cli_progress_bar)
 importFrom(cli,cli_progress_done)
 importFrom(cli,cli_progress_update)
