--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(as_draws_rvars,ernest_run)
 S3method(autoplot,ernest_estimate)
 S3method(autoplot,ernest_run)
 S3method(calculate,ernest_run)
+S3method(compile,ernest_run)
 S3method(compile,ernest_sampler)
 S3method(create_likelihood,"function")
 S3method(create_likelihood,ernest_likelihood)
@@ -13,15 +14,20 @@ S3method(format,ernest_estimate)
 S3method(format,ernest_likelihood)
 S3method(format,ernest_prior)
 S3method(format,ernest_run)
+S3method(format,ernest_sampler)
 S3method(format,summary.ernest_estimate)
 S3method(format,summary.ernest_run)
+S3method(generate,ernest_run)
 S3method(generate,ernest_sampler)
+S3method(new_ernest_run,ernest_run)
+S3method(new_ernest_run,ernest_sampler)
 S3method(plot,ernest_estimate)
 S3method(plot,ernest_run)
 S3method(print,ernest_estimate)
 S3method(print,ernest_likelihood)
 S3method(print,ernest_prior)
 S3method(print,ernest_run)
+S3method(print,ernest_sampler)
 S3method(print,summary.ernest_estimate)
 S3method(print,summary.ernest_run)
 S3method(summary,ernest_estimate)
@@ -43,6 +49,7 @@ export(nested_sampling)
 export(rwmh_cube)
 export(unif_cube)
 export(visualize)
+import(rlang)
 importFrom(R6,R6Class)
 importFrom(cli,cli_abort)
 importFrom(cli,cli_inform)
@@ -70,33 +77,10 @@ importFrom(lifecycle,deprecated)
 importFrom(posterior,as_draws)
 importFrom(posterior,as_draws_matrix)
 importFrom(posterior,as_draws_rvars)
-importFrom(rlang,"%|%")
-importFrom(rlang,"%||%")
-importFrom(rlang,.data)
-importFrom(rlang,arg_match)
-importFrom(rlang,arg_match0)
-importFrom(rlang,as_function)
-importFrom(rlang,call2)
-importFrom(rlang,caller_arg)
-importFrom(rlang,caller_env)
-importFrom(rlang,check_dots_empty)
-importFrom(rlang,check_dots_used)
-importFrom(rlang,expr)
-importFrom(rlang,exprs)
-importFrom(rlang,inject)
-importFrom(rlang,is_double)
-importFrom(rlang,is_empty)
-importFrom(rlang,is_scalar_double)
-importFrom(rlang,is_scalar_integerish)
-importFrom(rlang,is_scalar_logical)
-importFrom(rlang,list2)
-importFrom(rlang,new_function)
-importFrom(rlang,pairlist2)
-importFrom(rlang,try_fetch)
+importFrom(rlang,inherits_any)
 importFrom(tibble,tibble)
 importFrom(utils,head)
 importFrom(utils,tail)
 importFrom(vctrs,vec_c)
 importFrom(vctrs,vec_cast)
-importFrom(vctrs,vec_size)
 useDynLib(ernest, .registration = TRUE)
