--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,10 +8,9 @@ S3method(autoplot,ernest_run)
 S3method(calculate,ernest_run)
 S3method(compile,ernest_run)
 S3method(compile,ernest_sampler)
-S3method(create_likelihood,"function")
-S3method(create_likelihood,ernest_likelihood)
 S3method(format,ernest_estimate)
 S3method(format,ernest_likelihood)
+S3method(format,ernest_lrps)
 S3method(format,ernest_prior)
 S3method(format,ernest_run)
 S3method(format,ernest_sampler)
@@ -25,11 +24,13 @@ S3method(plot,ernest_estimate)
 S3method(plot,ernest_run)
 S3method(print,ernest_estimate)
 S3method(print,ernest_likelihood)
+S3method(print,ernest_lrps)
 S3method(print,ernest_prior)
 S3method(print,ernest_run)
 S3method(print,ernest_sampler)
 S3method(print,summary.ernest_estimate)
 S3method(print,summary.ernest_run)
+S3method(refresh_ernest_lrps,ernest_lrps)
 S3method(summary,ernest_estimate)
 S3method(summary,ernest_run)
 S3method(visualize,ernest_run)
@@ -50,7 +51,6 @@ export(rwmh_cube)
 export(unif_cube)
 export(visualize)
 import(rlang)
-importFrom(R6,R6Class)
 importFrom(cli,cli_abort)
 importFrom(cli,cli_inform)
 importFrom(cli,cli_progress_bar)
