--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,8 +14,10 @@ S3method(format,ernest_lrps)
 S3method(format,ernest_prior)
 S3method(format,ernest_run)
 S3method(format,ernest_sampler)
+S3method(format,rwmh_cube)
 S3method(format,summary.ernest_estimate)
 S3method(format,summary.ernest_run)
+S3method(format,unif_cube)
 S3method(generate,ernest_run)
 S3method(generate,ernest_sampler)
 S3method(new_ernest_run,ernest_run)
@@ -30,9 +32,13 @@ S3method(print,ernest_run)
 S3method(print,ernest_sampler)
 S3method(print,summary.ernest_estimate)
 S3method(print,summary.ernest_run)
-S3method(refresh_ernest_lrps,ernest_lrps)
+S3method(propose,ernest_lrps)
+S3method(propose,rwmh_cube)
+S3method(propose,unif_cube)
 S3method(summary,ernest_estimate)
 S3method(summary,ernest_run)
+S3method(update_lrps,ernest_lrps)
+S3method(update_lrps,rwmh_cube)
 S3method(visualize,ernest_run)
 export(as_draws)
 export(as_draws_matrix)
@@ -47,8 +53,11 @@ export(create_t_prior)
 export(create_uniform_prior)
 export(generate)
 export(nested_sampling)
+export(new_ernest_lrps)
+export(propose)
 export(rwmh_cube)
 export(unif_cube)
+export(update_lrps)
 export(visualize)
 import(rlang)
 importFrom(cli,cli_abort)
