--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,8 +51,8 @@ export(create_normal_prior)
 export(create_prior)
 export(create_t_prior)
 export(create_uniform_prior)
+export(ernest_sampler)
 export(generate)
-export(nested_sampling)
 export(new_ernest_lrps)
 export(propose)
 export(rwmh_cube)
@@ -82,7 +82,6 @@ importFrom(ggplot2,scale_x_continuous)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,vars)
 importFrom(glue,glue)
-importFrom(lifecycle,deprecated)
 importFrom(posterior,as_draws)
 importFrom(posterior,as_draws_matrix)
 importFrom(posterior,as_draws_rvars)
