--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,9 +4,9 @@ Version: 0.0.0.9000
 Authors@R: 
     person("Kyle", "Dewsnap", , "kyle.dewsnap@ubc.ca", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-2132-8083"))
-Description: Estimate model evidence and posterior distributions using
-    Bayesian nested sampling, and review your results using popular
-    statistical analysis packages.
+Description:Bayesian evidence estimation and posterior inference with the
+    nested sampling algorithm, along with S3 methods for simulating
+    uncertainty and creating visualisations.
 License: GPL (>= 3)
 URL: https://kylesnap.github.io/ernest/
 BugReports: https://github.com/kylesnap/ernest/issues/
