Simpler error catching for log_lik and priors; depreciated matrix-valued functions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,6 +62,7 @@ importFrom(generics,generate)
 importFrom(generics,visualize)
 importFrom(ggplot2,autoplot)
 importFrom(glue,glue)
+importFrom(lifecycle,deprecated)
 importFrom(posterior,as_draws)
 importFrom(posterior,as_draws_matrix)
 importFrom(posterior,as_draws_rvars)
