--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,9 +33,11 @@ S3method(print,summary.ernest_run)
 S3method(propose,ernest_lrps)
 S3method(propose,rwmh_cube)
 S3method(propose,unif_cube)
+S3method(propose,unif_ellipsoid)
 S3method(summary,ernest_run)
 S3method(update_lrps,ernest_lrps)
 S3method(update_lrps,rwmh_cube)
+S3method(update_lrps,unif_ellipsoid)
 S3method(visualize,ernest_run)
 export(as_draws)
 export(as_draws_matrix)
@@ -52,6 +54,7 @@ export(new_ernest_lrps)
 export(propose)
 export(rwmh_cube)
 export(unif_cube)
+export(unif_ellipsoid)
 export(update_lrps)
 export(visualize)
 import(rlang)
