--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ S3method(format,ernest_sampler)
 S3method(format,rwmh_cube)
 S3method(format,summary.ernest_run)
 S3method(format,unif_cube)
+S3method(format,unif_ellipsoid)
 S3method(generate,ernest_run)
 S3method(generate,ernest_sampler)
 S3method(new_ernest_run,ernest_run)
@@ -33,9 +34,11 @@ S3method(print,summary.ernest_run)
 S3method(propose,ernest_lrps)
 S3method(propose,rwmh_cube)
 S3method(propose,unif_cube)
+S3method(propose,unif_ellipsoid)
 S3method(summary,ernest_run)
 S3method(update_lrps,ernest_lrps)
 S3method(update_lrps,rwmh_cube)
+S3method(update_lrps,unif_ellipsoid)
 S3method(visualize,ernest_run)
 export(as_draws)
 export(as_draws_matrix)
