--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ export(as_draws_matrix)
 export(as_draws_rvars)
 export(calculate)
 export(compile)
+export(configure_logging)
 export(create_likelihood)
 export(create_normal_prior)
 export(create_prior)
