Reconfigured cli messages.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,11 @@ export(update_lrps)
 export(visualize)
 import(rlang)
 importFrom(cli,cli_warn)
+importFrom(cli,col_green)
+importFrom(cli,pb_current)
+importFrom(cli,pb_elapsed)
+importFrom(cli,pb_spin)
+importFrom(cli,symbol)
 importFrom(generics,calculate)
 importFrom(generics,compile)
 importFrom(generics,generate)
@@ -71,6 +76,7 @@ importFrom(lifecycle,deprecated)
 importFrom(posterior,as_draws)
 importFrom(posterior,as_draws_matrix)
 importFrom(posterior,as_draws_rvars)
+importFrom(prettyunits,pretty_signif)
 importFrom(tibble,tibble)
 importFrom(utils,head)
 importFrom(utils,tail)
