New adaptive rw sampler; rollback on traditional rwmh.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(autoplot,ernest_run)
 S3method(calculate,ernest_run)
 S3method(compile,ernest_run)
 S3method(compile,ernest_sampler)
+S3method(format,adaptive_rwmh)
 S3method(format,ernest_estimate)
 S3method(format,ernest_likelihood)
 S3method(format,ernest_logging)
@@ -33,15 +34,18 @@ S3method(print,ernest_prior)
 S3method(print,ernest_run)
 S3method(print,ernest_sampler)
 S3method(print,summary.ernest_run)
+S3method(propose,adaptive_rwmh)
 S3method(propose,ernest_lrps)
 S3method(propose,rwmh_cube)
 S3method(propose,unif_cube)
 S3method(propose,unif_ellipsoid)
 S3method(summary,ernest_run)
+S3method(update_lrps,adaptive_rwmh)
 S3method(update_lrps,ernest_lrps)
 S3method(update_lrps,rwmh_cube)
 S3method(update_lrps,unif_ellipsoid)
 S3method(visualize,ernest_run)
+export(adaptive_rwmh)
 export(as_draws)
 export(as_draws_matrix)
 export(as_draws_rvars)
