BUGFIX for creating log files.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ S3method(plot,ernest_estimate)
 S3method(plot,ernest_run)
 S3method(print,ernest_estimate)
 S3method(print,ernest_likelihood)
+S3method(print,ernest_logging)
 S3method(print,ernest_lrps)
 S3method(print,ernest_prior)
 S3method(print,ernest_run)
@@ -45,11 +46,11 @@ export(as_draws_matrix)
 export(as_draws_rvars)
 export(calculate)
 export(compile)
-export(configure_logging)
 export(create_likelihood)
 export(create_normal_prior)
 export(create_prior)
 export(create_uniform_prior)
+export(ernest_logging)
 export(ernest_sampler)
 export(generate)
 export(new_ernest_lrps)
