--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ S3method(format,ernest_lrps)
 S3method(format,ernest_prior)
 S3method(format,ernest_run)
 S3method(format,ernest_sampler)
+S3method(format,multi_ellipsoid)
 S3method(format,rwmh_cube)
 S3method(format,summary.ernest_run)
 S3method(format,unif_cube)
@@ -36,12 +37,14 @@ S3method(print,ernest_sampler)
 S3method(print,summary.ernest_run)
 S3method(propose,adaptive_rwmh)
 S3method(propose,ernest_lrps)
+S3method(propose,multi_ellipsoid)
 S3method(propose,rwmh_cube)
 S3method(propose,unif_cube)
 S3method(propose,unif_ellipsoid)
 S3method(summary,ernest_run)
 S3method(update_lrps,adaptive_rwmh)
 S3method(update_lrps,ernest_lrps)
+S3method(update_lrps,multi_ellipsoid)
 S3method(update_lrps,rwmh_cube)
 S3method(update_lrps,unif_ellipsoid)
 S3method(visualize,ernest_run)
@@ -58,6 +61,7 @@ export(create_uniform_prior)
 export(ernest_logging)
 export(ernest_sampler)
 export(generate)
+export(multi_ellipsoid)
 export(new_ernest_lrps)
 export(propose)
 export(rwmh_cube)
