Implemented slice sampler.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ S3method(format,ernest_run)
 S3method(format,ernest_sampler)
 S3method(format,multi_ellipsoid)
 S3method(format,rwmh_cube)
+S3method(format,slice)
 S3method(format,summary.ernest_run)
 S3method(format,unif_cube)
 S3method(format,unif_ellipsoid)
@@ -39,6 +40,7 @@ S3method(propose,adaptive_rwmh)
 S3method(propose,ernest_lrps)
 S3method(propose,multi_ellipsoid)
 S3method(propose,rwmh_cube)
+S3method(propose,slice)
 S3method(propose,unif_cube)
 S3method(propose,unif_ellipsoid)
 S3method(summary,ernest_run)
@@ -46,6 +48,7 @@ S3method(update_lrps,adaptive_rwmh)
 S3method(update_lrps,ernest_lrps)
 S3method(update_lrps,multi_ellipsoid)
 S3method(update_lrps,rwmh_cube)
+S3method(update_lrps,slice)
 S3method(update_lrps,unif_ellipsoid)
 S3method(visualize,ernest_run)
 export(adaptive_rwmh)
@@ -65,6 +68,7 @@ export(multi_ellipsoid)
 export(new_ernest_lrps)
 export(propose)
 export(rwmh_cube)
+export(slice)
 export(unif_cube)
 export(unif_ellipsoid)
 export(update_lrps)
