--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ S3method(format,ernest_lrps)
 S3method(format,ernest_prior)
 S3method(format,ernest_run)
 S3method(format,ernest_sampler)
+S3method(format,mini_balls)
 S3method(format,multi_ellipsoid)
 S3method(format,rwmh_cube)
 S3method(format,slice)
@@ -38,6 +39,7 @@ S3method(print,ernest_sampler)
 S3method(print,summary.ernest_run)
 S3method(propose,adaptive_rwmh)
 S3method(propose,ernest_lrps)
+S3method(propose,mini_balls)
 S3method(propose,multi_ellipsoid)
 S3method(propose,rwmh_cube)
 S3method(propose,slice)
@@ -46,6 +48,7 @@ S3method(propose,unif_ellipsoid)
 S3method(summary,ernest_run)
 S3method(update_lrps,adaptive_rwmh)
 S3method(update_lrps,ernest_lrps)
+S3method(update_lrps,mini_balls)
 S3method(update_lrps,multi_ellipsoid)
 S3method(update_lrps,rwmh_cube)
 S3method(update_lrps,slice)
@@ -64,6 +67,7 @@ export(create_uniform_prior)
 export(ernest_logging)
 export(ernest_sampler)
 export(generate)
+export(mini_balls)
 export(multi_ellipsoid)
 export(new_ernest_lrps)
 export(propose)
