--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -45,6 +45,8 @@ LinkingTo:
 VignetteBuilder: 
     knitr
 Config/testthat/edition: 3
+Config/testthat/parallel: true
+Config/testthat/start-first: algorithm, p_recovery, correctness
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE, roclets = c ("namespace", "rd",
