Replacing adaptive with NURS sampler.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,6 @@ S3method(autoplot,ernest_run)
 S3method(calculate,ernest_run)
 S3method(compile,ernest_run)
 S3method(compile,ernest_sampler)
-S3method(format,adaptive_rwmh)
 S3method(format,ernest_estimate)
 S3method(format,ernest_likelihood)
 S3method(format,ernest_logging)
@@ -17,6 +16,7 @@ S3method(format,ernest_run)
 S3method(format,ernest_sampler)
 S3method(format,mini_balls)
 S3method(format,multi_ellipsoid)
+S3method(format,nurs)
 S3method(format,rwmh_cube)
 S3method(format,slice)
 S3method(format,summary.ernest_run)
@@ -36,24 +36,23 @@ S3method(print,ernest_prior)
 S3method(print,ernest_run)
 S3method(print,ernest_sampler)
 S3method(print,summary.ernest_run)
-S3method(propose,adaptive_rwmh)
 S3method(propose,ernest_lrps)
 S3method(propose,mini_balls)
 S3method(propose,multi_ellipsoid)
+S3method(propose,nurs)
 S3method(propose,rwmh_cube)
 S3method(propose,slice)
 S3method(propose,unif_cube)
 S3method(propose,unif_ellipsoid)
 S3method(summary,ernest_run)
-S3method(update_lrps,adaptive_rwmh)
 S3method(update_lrps,ernest_lrps)
 S3method(update_lrps,mini_balls)
 S3method(update_lrps,multi_ellipsoid)
+S3method(update_lrps,nurs)
 S3method(update_lrps,rwmh_cube)
 S3method(update_lrps,slice)
 S3method(update_lrps,unif_ellipsoid)
 S3method(visualize,ernest_run)
-export(adaptive_rwmh)
 export(as_draws)
 export(as_draws_matrix)
 export(as_draws_rvars)
@@ -69,6 +68,7 @@ export(generate)
 export(mini_balls)
 export(multi_ellipsoid)
 export(new_ernest_lrps)
+export(nurs)
 export(propose)
 export(rwmh_cube)
 export(slice)
