New testing for LRPS. Minor bug fixes.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ S3method(update_lrps,multi_ellipsoid)
 S3method(update_lrps,nurs)
 S3method(update_lrps,rwmh_cube)
 S3method(update_lrps,slice)
+S3method(update_lrps,unif_cube)
 S3method(update_lrps,unif_ellipsoid)
 S3method(visualize,ernest_run)
 export(as_draws)
