SRR compliance + renaming two LRPS for uniqueness.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,9 +16,9 @@ S3method(format,ernest_run)
 S3method(format,ernest_sampler)
 S3method(format,mini_balls)
 S3method(format,multi_ellipsoid)
-S3method(format,nurs)
+S3method(format,no_underrun)
 S3method(format,rwmh_cube)
-S3method(format,slice)
+S3method(format,slice_rectangle)
 S3method(format,summary.ernest_run)
 S3method(format,unif_cube)
 S3method(format,unif_ellipsoid)
@@ -39,18 +39,18 @@ S3method(print,summary.ernest_run)
 S3method(propose,ernest_lrps)
 S3method(propose,mini_balls)
 S3method(propose,multi_ellipsoid)
-S3method(propose,nurs)
+S3method(propose,no_underrun)
 S3method(propose,rwmh_cube)
-S3method(propose,slice)
+S3method(propose,slice_rectangle)
 S3method(propose,unif_cube)
 S3method(propose,unif_ellipsoid)
 S3method(summary,ernest_run)
 S3method(update_lrps,ernest_lrps)
 S3method(update_lrps,mini_balls)
 S3method(update_lrps,multi_ellipsoid)
-S3method(update_lrps,nurs)
+S3method(update_lrps,no_underrun)
 S3method(update_lrps,rwmh_cube)
-S3method(update_lrps,slice)
+S3method(update_lrps,slice_rectangle)
 S3method(update_lrps,unif_cube)
 S3method(update_lrps,unif_ellipsoid)
 S3method(visualize,ernest_run)
@@ -69,10 +69,10 @@ export(generate)
 export(mini_balls)
 export(multi_ellipsoid)
 export(new_ernest_lrps)
-export(nurs)
+export(no_underrun)
 export(propose)
 export(rwmh_cube)
-export(slice)
+export(slice_rectangle)
 export(unif_cube)
 export(unif_ellipsoid)
 export(update_lrps)
