CRAN check compliance, addressing build errors.

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -3,8 +3,9 @@
 on:
   workflow_dispatch:
   push:
-    branches: [main, master, dev]
+    branches: [main]
   pull_request:
+    branches: [main, dev]
 
 name: R-CMD-check.yaml
 
