--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -3,8 +3,9 @@
 on:
   workflow_dispatch:
   push:
-    branches: [main, master, dev]
+    branches: [main, master]
   pull_request:
+    branches: [main, dev]
 
 name: test-coverage.yaml
 
