--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ S3method(compile,ernest_sampler)
 S3method(format,ernest_estimate)
 S3method(format,ernest_likelihood)
 S3method(format,ernest_logging)
+S3method(format,ernest_lrps)
 S3method(format,ernest_prior)
 S3method(format,ernest_run)
 S3method(format,ernest_sampler)
