--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -46,6 +46,7 @@ VignetteBuilder:
     knitr
 Config/testthat/edition: 3
 Config/testthat/parallel: true
+Config/testthat/start-first: algorithm, *_ellipsoid, mini_balls
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE, roclets = c ("namespace", "rd",
