New prior object with clearer example and concatenate-compatible.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(as_draws_matrix,ernest_run)
 S3method(as_draws_rvars,ernest_run)
 S3method(autoplot,ernest_estimate)
 S3method(autoplot,ernest_run)
+S3method(c,ernest_prior)
 S3method(calculate,ernest_run)
 S3method(compile,ernest_run)
 S3method(compile,ernest_sampler)
