New HDI calculations (#29) and more efficient plot methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -82,7 +82,16 @@ importFrom(generics,calculate)
 importFrom(generics,compile)
 importFrom(generics,generate)
 importFrom(generics,visualize)
+importFrom(ggplot2,aes)
 importFrom(ggplot2,autoplot)
+importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_ribbon)
+importFrom(ggplot2,geom_vline)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,scale_fill_brewer)
+importFrom(ggplot2,scale_x_reverse)
+importFrom(ggplot2,scale_y_continuous)
+importFrom(ggplot2,theme_minimal)
 importFrom(glue,glue)
 importFrom(lifecycle,deprecated)
 importFrom(posterior,as_draws)
