Redocumented plot methods.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -89,7 +89,7 @@ importFrom(ggplot2,geom_ribbon)
 importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,scale_fill_brewer)
-importFrom(ggplot2,scale_x_reverse)
+importFrom(ggplot2,scale_x_continuous)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme_minimal)
 importFrom(glue,glue)
