Simplified CLI output.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,8 +14,6 @@ S3method(format,ernest_likelihood)
 S3method(format,ernest_logging)
 S3method(format,ernest_lrps)
 S3method(format,ernest_prior)
-S3method(format,ernest_run)
-S3method(format,ernest_sampler)
 S3method(format,multi_ellipsoid)
 S3method(format,rwmh_cube)
 S3method(format,slice_rectangle)
@@ -84,19 +82,24 @@ importFrom(generics,generate)
 importFrom(generics,visualize)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,autoplot)
+importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_ribbon)
 importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,scale_colour_distiller)
 importFrom(ggplot2,scale_fill_brewer)
 importFrom(ggplot2,scale_x_continuous)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme_minimal)
+importFrom(ggplot2,vars)
 importFrom(glue,glue)
 importFrom(lifecycle,deprecated)
 importFrom(posterior,as_draws)
 importFrom(posterior,as_draws_matrix)
 importFrom(posterior,as_draws_rvars)
+importFrom(prettyunits,pretty_round)
 importFrom(prettyunits,pretty_signif)
 importFrom(tibble,tibble)
 importFrom(utils,head)
