--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -31,6 +31,7 @@ jobs:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
       R_KEEP_PKG_SOURCE: yes
       ERNEST_EXTENDED_TESTS: ${{contains(github.event.head_commit.message, 'run-extended')}}
+      RGL_USE_NULL: true
 
     steps:
       - uses: actions/checkout@v4
